--- a/beer-spa-hash/index.html
+++ b/beer-spa-hash/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SPA with History API Routing</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"/>
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
@@ -17,20 +17,9 @@
 <body>
     <nav id="anchors" class="navbar navbar-expand-lg navbar-light bg-light">
         <a href="#/" id="home-href">HOME</a>
-        <a href="#/types" id="types-href">TYPES</a>
-        <a href="#/brands" id="brands-href">BRANDS</a>
-        <a href="#/map" id="map-href">MAP</a>
-        <a href="#/nationalities" id="nationalities-href">NATIONALITIES</a>
-        <a href="#/about" id="about-href">ABOUT</a>
+        <a href="#/beer" id="films-href">BEER</a>
     </nav>
-
-    <div class="text-center">
-        <h1>Welcome to the Beer SPA</h1>
-        <p>Explore different types of beers, their nationalities, and brands.</p>
-        <button id="welcome-btn" class="btn btn-primary">Click Me!</button>
-    </div>
-
-    <div id="container" class="container"></div>
+    <div id="container"></div>
 </body>
 
 </html>
