--- a/beer-spa-hash/index.html
+++ b/beer-spa-hash/index.html
@@ -15,9 +15,9 @@
 </head>
 
 <body>
-    <nav id="anchors" class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav id="anchors" class="navbar navbar-white-lg navbar-light bg-black">
         <a href="#/" id="home-href">HOME</a>
-        <a href="#/beer" id="films-href">BEER</a>
+        <a href="#/allbeer" id="beers-href">ALL BEER</a>
     </nav>
     <div id="container"></div>
 </body>
